--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML ONLY</title>
     <link rel="icon" type="image/x-icon" href="/assets/html logo.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <header>
+        <h1>HTML ONLY</h1>
+        <h4>
+            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
+            Navigation
+        </h4>
+        <ul>
+            <li>
+                <a href="#"> What is this? </a>
+            </li>
+            <li>
+                <a href="#"> How does this work? </a>
+            </li>
+            <li>
+                <a href="#"> But why? </a>
+            </li>
+        </ul>
+    </header>
 </body>
 </html>
