Finished 'What is this?' section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
             </li>
         </ul>
     </header>
+
+    <main>
+        <div class="what-is-this">
+            <h2>What is this?</h2>
+            <p>
+                This page was inspired by a <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649" target="_blank">tweet from Salma</a>. 
+                Pretty HTML only pages are difficult to make well, and accessible.
+                But here we are. I'm trying my best.
+            </p>
+        </div>
+
+        <hr class="orange-line">
+    </main>
 </body>
 </html>
