--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </header>
 
     <main>
-        <div class="what-is-this">
+        <div class="section what-is-this">
             <h2>What is this?</h2>
+            <br>
             <p>
                 This page was inspired by a <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649" target="_blank">tweet from Salma</a>. 
                 Pretty HTML only pages are difficult to make well, and accessible.
@@ -38,6 +39,36 @@
         </div>
 
         <hr class="orange-line">
+
+        <div class="section how-does-this-work">
+            <h2>How does this work?</h2>
+            <br>
+            <p>
+                The key to a lot of this is leveraging using tables with a
+                <span>role="presentation"</span> attribute to make decorated sections without css.
+                If you view source on the page, you'll see that there are a LOT of
+                tables. The table tag typically is used to display tabular data and
+                should NOT be used as a layout method. However, since I am not allowed
+                to use CSS, I am pretty much exclusively relying on tables for this
+                purpose. The presentation role tells the browser to not expose the
+                table and its tabluar children in the accessibility tree. This will
+                make it easier to navigate for assistive technology. 
+                <br> <br>
+                I'm also leveraging some deprecated HTML elements from HTML 3.2 that you should
+                never use. In order to be "compliant", I've added the HTML 3.2 doctype
+                at the top of the page:
+                <span> &lt;!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"&gt; </span>
+                This helps give a hint to the browser that we are going to use some
+                older stuff.
+                <br> <br>
+                HOWEVER, I'm also using some newer things such as
+                <span>details/summary, section, main, header,</span> and <span>footer</span>. So I'm just making
+                a mess of my doctype and what I should be actually using!
+            </p>
+        </div>
+
+        <hr class="orange-line">
+
     </main>
 </body>
 </html>
