Finished with 'But Why?' section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <h2>What is this?</h2>
             <br>
             <p>
-                This page was inspired by a <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649" target="_blank">tweet from Salma</a>. 
+                This page was inspired by a 
+                <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649" target="_blank" class="unique-link">
+                    tweet from Salma
+                </a>. 
                 Pretty HTML only pages are difficult to make well, and accessible.
                 But here we are. I'm trying my best.
             </p>
@@ -69,6 +72,18 @@
 
         <hr class="orange-line">
 
+        <div class="section but-why">
+            <h2>But Why?</h2>
+            <br><br>
+            <img src="/assets/why-huh.gif" alt="Why-huh-meme">
+            <br> <br>
+            <p>
+                I make terrible things. This was an exciting
+                <a href="https://xkcd.com/356/" class="unique-link">nerd snipe</a> on a sunday, And I took up the challenge!
+            </p>
+        </div>
+
+        <hr class="orange-line">
     </main>
 </body>
 </html>
