Finished with footer

--- a/index.html
+++ b/index.html
@@ -85,5 +85,14 @@
 
         <hr class="orange-line">
     </main>
+
+    <footer>
+        <p>
+            Created by <a href="#">Alex Riviere</a>
+        </p>
+        <p>
+            (One <span>marquee</span> for good measure...)
+        </p>
+    </footer>
 </body>
 </html>
