Fixed some little mistakes

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
             Navigation
         </h4>
         <ul>
-            <li>
-                <a href="#"> What is this? </a>
-            </li>
-            <li>
-                <a href="#"> How does this work? </a>
-            </li>
-            <li>
-                <a href="#"> But why? </a>
-            </li>
+            <div>
+                <li>
+                    <a href="#scroll-to-first"> What is this? </a>
+                </li>
+                <li>
+                    <a href="#scroll-to-second"> How does this work? </a>
+                </li>
+                <li>
+                    <a href="#scroll-to-third"> But why? </a>
+                </li>
+            </div>
         </ul>
     </header>
 
     <main>
-        <div class="section what-is-this">
+        <div class="section what-is-this" id="scroll-to-first">
             <h2>What is this?</h2>
             <br>
             <p>
@@ -43,7 +45,7 @@
 
         <hr class="orange-line">
 
-        <div class="section how-does-this-work">
+        <div class="section how-does-this-work" id="scroll-to-second">
             <h2>How does this work?</h2>
             <br>
             <p>
@@ -72,7 +74,7 @@
 
         <hr class="orange-line">
 
-        <div class="section but-why">
+        <div class="section but-why" id="scroll-to-third">
             <h2>But Why?</h2>
             <br><br>
             <img src="/assets/why-huh.gif" alt="Why-huh-meme">
