--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <footer>
         <p>
-            Created by <a href="#">Alex Riviere</a>
+            Created by <a href="https://alexriviere.com/">Alex Riviere</a>
         </p>
         <p>
             (One <span>marquee</span> for good measure...)
